K8S/istio/istio-virtualservices.yaml
apiVersion: networking.istio.io/v1alpha3 
kind: VirtualService 
metadata:
  # nama virtualservice
  name: dicoding-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - dicoding-gateway
  http:
    - match:
        - uri:
            exact: /order
        - uri:
            exact: /shipping
      route:
        - destination:
            host: order-service
            port:
              number: 3000
          weight: 100
        - destination:
            host: shipping-service
            port:
              number: 3001
          weight: 100
